# ideal-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  config.json.template  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/admin/: oauth2.md  overview.md
docs/dev/: api-admin.md  api-auth.md  api-guilds.md  api.md  deploy.md  setup.md
docs/guide/: ai.md  commands.md  config.md  getting-started.md  update.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css
scripts/: setup.sh  start-all.sh  start-api.sh  start-bot.sh  update.sh
src/: config.py  logging_setup.py  main.py  state.py
src/ai/: generator.py  local.py
src/api/: app.py  auth.py  deps.py  models.py  server.py
src/cogs/: config_cog.py  conv.py  dashboard.py  events.py  forget.py  reset.py  speak.py  teach.py  wordlist.py
src/db/: bot_settings.py  connection.py  conversation_log.py  discord_cache.py  fallback_responses.py  guild_settings.py  words.py  (+1 more)
tests/: conftest.py  test_api_endpoints.py  test_config.py  test_db_bot_settings.py  test_db_conversation_log.py  test_db_fallback_responses.py  test_db_guild_settings.py  test_db_teach_allowlist.py  test_db_words.py  test_discord_cache.py  test_encryption.py  test_generator.py  test_local_ai_suspension.py  test_logging_setup.py  test_server_log_scenario.py  test_state.py  test_tail_lines.py  test_utils.py
(+35 files in other folders)
